--- a/package.json
+++ b/package.json
@@ -16,11 +16,7 @@
       "import": "./dist/index.mjs"
     }
   },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
+  "files": ["dist", "README.md", "LICENSE"],
   "scripts": {
     "build": "tsup && bun run scripts/add-shebang.ts",
     "build:watch": "tsup --watch",
@@ -54,15 +50,17 @@
     "implement": "bun run scripts/implement.ts"
   },
   "dependencies": {
+    "@stricli/core": "^1.1.2",
     "commander": "^14.0.0",
     "gray-matter": "^4.0.3",
+    "simple-git": "^3.27.0",
+    "stricli": "^1.1.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/bun": "latest",
     "@types/node": "^22.15.21",
-    "simple-git": "^3.27.0",
     "tsup": "^8.5.0",
     "typescript": "^5.0.0"
   },
